# forest

./: .gitignore  CMakeLists.txt  README.md
scripts/: setup-vcpkg.sh
src/: CMakeLists.txt
src/include/forest/: ArraySpan.hpp  Forest.detail.hpp  Forest.hpp  ForestSpan.hpp  forest.detail.hpp  forest.hpp  subforest.hpp
test/: ArraySpan.test.cpp  CMakeLists.txt  Forest.test.cpp  ForestSpan.test.cpp  forest.test.cpp
